linkedin link fix

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                     <p class="about-text">I'm excited to keep learning, exploring, and creating solutions that make everyday interactions—digital or physical—feel a little more intuitive.</p>
                     
                     <div class="about-social">
-                        <a href="https://www.linkedin.com/in/jacob-roginski/" target="_blank" class="social-link">
+                        <a href="https://www.linkedin.com/in/jacob-h-roginski/" target="_blank" class="social-link">
                             <img src="asset/linkedin logo.png" alt="LinkedIn" class="social-icon">
                         </a>
                     </div>
