making footer links work

--- a/contact.html
+++ b/contact.html
@@ -92,21 +92,21 @@
             </div>
         </section>
 
-        <footer class="footer">
+         <footer class="footer">
       <div class="footer-contact">
         <h2>Find me at</h2>
         <a href="mailto:jhrogins305@gmail.com" class="contact-email">jhrogins305@gmail.com</a>
-        <a href="#" class="btn-contact">Contact Me</a>
+        <a href="contact.html" class="btn-contact">Contact Me</a>
       </div>
       
       <div class="footer-divider"></div>
       
       <nav class="footer-nav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#resume">Resume</a>
-        <a href="#contact">Contact</a>
-        <a href="#" class="linkedin-link">LinkedIn</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
+        <a href="www.linkedin.com/in/jacob-h-roginski" class="linkedin-link">LinkedIn</a>
       </nav>
     </footer>
 
