--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
-        <a href="www.linkedin.com/in/jacob-h-roginski" class="linkedin-link">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/jacob-h-roginski/" class="linkedin-link">LinkedIn</a>
       </nav>
     </footer>
 
