--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
               <div class="card-logo"><img src="asset/Waggoner Logo.png" alt="Waggoner Financial" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer images/Cobra Computer.png" alt="Waggoner Prototype" class="product-img" /></div>
               <div class="card-product-name">Waggoner Financial</div>
-              <div class="card-product-price">UI/UX Designer</div>
+              <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
           </div>
 
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
-              <div class="card-date-top">Winter 2025</div>
+              <div class="card-date-top">Fall 2025</div>
               <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/MSU Logo.png" alt="Michigan State University" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer images/MSU computer.png" alt="Michigan State Prototype" class="product-img" /></div>
@@ -99,34 +99,34 @@
 
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
-              <div class="card-date-top">Spring 2025</div>
+              <div class="card-date-top">Ongoing</div>
               <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/MSU ESK8 Logo.png" alt="MSU E-Skateboard Club" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer images/MSU ESK8 computer.png" alt="MSU E-Skateboard Prototype" class="product-img" /></div>
               <div class="card-product-name">MSU E-Skateboard Club</div>
-              <div class="card-product-price">UI/UX Designer</div>
+              <div class="card-product-price">President & Designer</div>
             </div>
           </div>
 
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
-              <div class="card-date-top">Summer 2025</div>
+              <div class="card-date-top">Fall 2025</div>
               <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/Arum Logo.png" alt="Arum" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer images/Arum Computer.png" alt="Arum Prototype" class="product-img" /></div>
               <div class="card-product-name">Arum</div>
-              <div class="card-product-price">UI/UX Designer</div>
+              <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
           </div>
 
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
-              <div class="card-date-top">Fall 2025</div>
+              <div class="card-date-top">Spring 2025</div>
               <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/CAHP Logo.png" alt="CAHP" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/CAHP Computer.png" alt="CAHP Prototype" class="product-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer images/CAHP computer.png" alt="CAHP Prototype" class="product-img" /></div>
               <div class="card-product-name">Capital Area Housing Partnership</div>
-              <div class="card-product-price">UI/UX Designer</div>
+              <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
           </div>
         </div>
