link to learn more on home

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>Product Management, UI/UX Design, Competitive Analysis, Communication, Wireframing, Figma</p>
           </div>
           
-          <a href="#" class="btn-learn-more">Learn More</a>
+          <a href="https://www.waggoner-financial.com" class="btn-learn-more">Learn More</a>
         </div>
       </div>
     </section>
