Revise resume with updated experiences and roles
Updated the resume to reflect new experiences and roles.

--- a/resume.html
+++ b/resume.html
@@ -67,13 +67,13 @@
                     <div class="resume-item">
                         <div class="resume-item-header">
                             <div>
-                                <h3 class="resume-item-title">MSU RHS Digital Strategic Services, East Lansing, MI</h3>
-                                <p class="resume-item-role">Information Technician Assistant</p>
+                                <h3 class="resume-item-title">Lens, East Lansing, MI</h3>
+                                <p class="resume-item-role">Lead UI/UX Designer & Researcher</p>
                             </div>
-                            <div class="resume-item-date">Sept. 2023-Present</div>
+                            <div class="resume-item-date">Nov. 2025-Present</div>
                         </div>
-                        <p class="resume-item-indent">Responsible for supporting all computers, workstations, printers/copiers, digital signs, time clocks, and all employee equipment that involves replacing, fixing, & troubleshooting any technical issues</p>
-                        <p class="resume-item-indent">Support 13+ departments and units for 2000+ full-time employees active in the Student Life and Engagement division</p>
+                        <p class="resume-item-indent">Partnered with founder to design an accessible software solution that streamlines the research process across multiple academic disciplines</p>
+                        <p class="resume-item-indent">Drove the product lifecycle from zero to launch through competitive analysis, user research, and iterative prototyping</p>
                     </div>
 
                     <div class="resume-item">
@@ -98,6 +98,17 @@
                         </div>
                         <p class="resume-item-indent">Designed and delivered a fully interactive high-fidelity prototype. Also with a product management role by organizing workflows in Jira, facilitating team and stakeholder discussions, and guiding the project from concept through final delivery</p>
                         <p class="resume-item-indent">Led cross-functional communication by running meetings, aligning design decisions with product goals, and ensuring a smooth transition from planning to execution</p>
+                    </div>
+                     <div class="resume-item">
+                        <div class="resume-item-header">
+                            <div>
+                                <h3 class="resume-item-title">MSU RHS Digital Strategic Services, East Lansing, MI</h3>
+                                <p class="resume-item-role">Information Technician Assistant</p>
+                            </div>
+                            <div class="resume-item-date">Sept. 2023-Present</div>
+                        </div>
+                        <p class="resume-item-indent">Responsible for supporting all computers, workstations, printers/copiers, digital signs, time clocks, and all employee equipment that involves replacing, fixing, & troubleshooting any technical issues</p>
+                        <p class="resume-item-indent">Support 13+ departments and units for 2000+ full-time employees active in the Student Life and Engagement division</p>
                     </div>
                 </div>
 
