--- a/waggoner.html
+++ b/waggoner.html
@@ -10,8 +10,14 @@
     <div class="wrapper">
         
         <header class="header">
-            <div class="logo">
-                <img src="asset/Union.png" alt="Jake Roginski" class="logo-image" />
+            <div class="header-left">
+                <a href="index.html" class="logo">
+                    <img src="asset/Union.png" alt="Jake Roginski" class="logo-image" />
+                    <img src="asset/Union white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
+                </a>
+                <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
+                    <img src="asset/dark icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
+                </button>
             </div>
             <div class="hamburger-menu">
                 <input type="checkbox" id="hamburger-toggle" class="hamburger-checkbox" />
@@ -38,7 +44,7 @@
         <section class="project-showcase">
             <div class="project-showcase-header">
                 <div class="project-showcase-logo">
-                    <img src="asset/Waggoner Logo.png" alt="Waggoner Financial" class="showcase-logo-img" />
+                    <img src="asset/waggoner grey scale.png" alt="Waggoner Financial" class="showcase-logo-img" />
                 </div>
                 <h1 class="project-showcase-title">Waggoner Financial</h1>
                 <p class="project-showcase-meta">UI/UX Designer & Product Manager | Fall 2025</p>
@@ -437,6 +443,42 @@
             dot.addEventListener('click', () => {
                 designGoToSlide2(index);
             });
+        });
+
+        // Dark Mode Toggle
+        const darkModeToggle = document.getElementById('darkModeToggle');
+        const htmlElement = document.documentElement;
+        const logoImages = document.querySelectorAll('.logo-image');
+        const toggleIcon = document.querySelector('.toggle-icon-light');
+
+        // Check for saved dark mode preference or default to light mode
+        const isDarkMode = localStorage.getItem('darkMode') === 'true';
+        if (isDarkMode) {
+            htmlElement.classList.add('dark-mode');
+            logoImages[0].classList.add('dark-hidden');
+            logoImages[1].classList.remove('dark-hidden');
+            if (toggleIcon) toggleIcon.src = 'asset/icons/dark icon.png';
+        } else {
+            logoImages[0].classList.remove('dark-hidden');
+            logoImages[1].classList.add('dark-hidden');
+            if (toggleIcon) toggleIcon.src = 'asset/icons/light icon.png';
+        }
+
+        darkModeToggle.addEventListener('click', () => {
+            htmlElement.classList.toggle('dark-mode');
+            const isNowDark = htmlElement.classList.contains('dark-mode');
+            localStorage.setItem('darkMode', isNowDark);
+            
+            // Toggle logo visibility
+            if (isNowDark) {
+                logoImages[0].classList.add('dark-hidden');
+                logoImages[1].classList.remove('dark-hidden');
+                if (toggleIcon) toggleIcon.src = 'asset/icons/dark icon.png';
+            } else {
+                logoImages[0].classList.remove('dark-hidden');
+                logoImages[1].classList.add('dark-hidden');
+                if (toggleIcon) toggleIcon.src = 'asset/icons/light icon.png';
+            }
         });
     </script>
 </body>
