Update dark mode icon path in waggoner.html

--- a/waggoner.html
+++ b/waggoner.html
@@ -16,7 +16,7 @@
                     <img src="asset/Union white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
                 </a>
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-                    <img src="asset/dark icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
+                    <img src="asset/icons/dark icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
                 </button>
             </div>
             <div class="hamburger-menu">
