Restore original index.html structure
The HTML structure has been restored to its original state, including the header, sections, and footer. All elements are now correctly formatted and functional.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         </div>
         <div class="project-details">
           <div class="project-meta">Fall 2025</div>
-          <h2 class="project-title">Waggoner Financial</h2>
+          <a href="waggoner.html" class="project-title-link">
+            <h2 class="project-title">Waggoner Financial <span class="arrow-icon">→</span></h2>
+          </a>
           
           <div class="project-section-item">
             <h3>About</h3>
@@ -66,8 +68,6 @@
             <h3>Skills</h3>
             <p>Product Management, UI/UX Design, Competitive Analysis, Communication, Wireframing, Figma</p>
           </div>
-          
-          <a href="waggoner.html" class="btn-learn-more">Learn More</a>
         </div>
       </div>
     </section>
