--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="project-details">
           <div class="project-meta">Fall 2025</div>
           <a href="waggoner.html" class="project-title-link">
-            <h2 class="project-title">Waggoner Financial <span class="arrow-icon">→</span></h2>
+            <h2 class="project-title">Waggoner Financial <img src="asset/iconcs/arrow up.png" alt="" class="arrow-icon" /></h2>
           </a>
           
           <div class="project-section-item">
