Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="project-details">
           <div class="project-meta">Fall 2025</div>
           <a href="waggoner.html" class="project-title-link">
-            <h2 class="project-title">Waggoner Financial <img src="asset/iconcs/Arrow up.png" alt="open" class="arrow-icon" /></h2>
+            <h2 class="project-title">Waggoner Financial <img src="asset/icons/Arrow up.png" alt="open" class="arrow-icon" /></h2>
           </a>
           
           <div class="project-section-item">
@@ -332,4 +332,5 @@
   </script>
 </body>
 </html>
+
 
