updated names for images

--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
             <div class="header-left">
                 <a href="index.html" class="logo">
                     <img src="asset/Union.png" alt="Jake Roginski" class="logo-image" />
-                    <img src="asset/Union white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
+                    <img src="asset/Union_white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
                 </a>
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-                    <img src="asset/dark icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
+                    <img src="asset/dark_icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
                 </button>
             </div>
             <div class="hamburger-menu">
@@ -56,13 +56,13 @@
                     
                     <div class="about-social">
                         <a href="https://www.linkedin.com/in/jacob-h-roginski/" target="_blank" class="social-link">
-                            <img src="asset/linkedin logo.png" alt="LinkedIn" class="social-icon">
+                            <img src="asset/linkedin_logo.png" alt="LinkedIn" class="social-icon">
                         </a>
                     </div>
                 </div>
                 
                 <div class="about-image">
-                    <img src="asset/about me image.png" alt="Jake Roginski" class="about-portrait">
+                    <img src="asset/about_me_image.png" alt="Jake Roginski" class="about-portrait">
                 </div>
             </div>
         </section>
