--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="header-left">
         <a href="index.html" class="logo">
           <img src="asset/Union.png" alt="Jake Roginski" class="logo-image" />
-          <img src="asset/Union white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
+          <img src="asset/Union_white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
         </a>
         <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-          <img src="asset/icons/light icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
+          <img src="asset/icons/light_icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
         </button>
       </div>
       <div class="hamburger-menu">
@@ -51,12 +51,12 @@
     <section class="main-project">
       <div class="project-grid">
         <div class="project-image-container">
-          <img src="asset/Cobra Prototype.png" alt="Waggoner Cobra" class="project-image" />
+          <img src="asset/Cobra_Prototype.png" alt="Waggoner Cobra" class="project-image" />
         </div>
         <div class="project-details">
           <div class="project-meta">Fall 2025</div>
           <a href="waggoner.html" class="project-title-link">
-            <h2 class="project-title">Waggoner Financial <img src="asset/icons/Arrow up.png" alt="open" class="arrow-icon" /></h2>
+            <h2 class="project-title">Waggoner Financial <img src="asset/icons/Arrow_up.png" alt="open" class="arrow-icon" /></h2>
           </a>
           
           <div class="project-section-item">
@@ -86,8 +86,8 @@
             <div class="carousel-item" style="background: linear-gradient(135deg, #5D3A6B 0%, #3D1F4A 100%);">
               <div class="card-date-top">Fall 2025</div>
               <a href="waggoner.html" class="card-open-icon">⤴</a>
-              <div class="card-logo"><img src="asset/Waggoner Logo.png" alt="Waggoner Financial" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/Cobra Computer.png" alt="Waggoner Prototype" class="product-img" /></div>
+              <div class="card-logo"><img src="asset/Waggoner_Logo.png" alt="Waggoner Financial" class="logo-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer images/Cobra_Computer.png" alt="Waggoner Prototype" class="product-img" /></div>
               <div class="card-product-name">Waggoner Financial</div>
               <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
@@ -97,8 +97,8 @@
             <div class="carousel-item" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
               <div class="card-date-top">Fall 2025</div>
               <div class="card-open-icon">⤴</div>
-              <div class="card-logo"><img src="asset/MSU Logo.png" alt="Michigan State University" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/MSU computer.png" alt="Michigan State Prototype" class="product-img" /></div>
+              <div class="card-logo"><img src="asset/MSU_Logo.png" alt="Michigan State University" class="logo-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer images/MSU_computer.png" alt="Michigan State Prototype" class="product-img" /></div>
               <div class="card-product-name">Michigan State University</div>
               <div class="card-product-price">UI/UX Designer</div>
             </div>
@@ -108,8 +108,8 @@
             <div class="carousel-item" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
               <div class="card-date-top">Ongoing</div>
               <div class="card-open-icon">⤴</div>
-              <div class="card-logo"><img src="asset/MSU ESK8 Logo.png" alt="MSU E-Skateboard Club" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/MSU ESK8 computer.png" alt="MSU E-Skateboard Prototype" class="product-img" /></div>
+              <div class="card-logo"><img src="asset/MSU_ESK8_Logo.png" alt="MSU E-Skateboard Club" class="logo-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer images/MSU_ESK8_computer.png" alt="MSU E-Skateboard Prototype" class="product-img" /></div>
               <div class="card-product-name">MSU E-Skateboard Club</div>
               <div class="card-product-price">President & Designer</div>
             </div>
@@ -119,8 +119,8 @@
             <div class="carousel-item" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
               <div class="card-date-top">Fall 2025</div>
               <div class="card-open-icon">⤴</div>
-              <div class="card-logo"><img src="asset/Arum Logo.png" alt="Arum" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/Arum Computer.png" alt="Arum Prototype" class="product-img" /></div>
+              <div class="card-logo"><img src="asset/Arum_Logo.png" alt="Arum" class="logo-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer images/Arum_Computer.png" alt="Arum Prototype" class="product-img" /></div>
               <div class="card-product-name">Arum</div>
               <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
@@ -130,8 +130,8 @@
             <div class="carousel-item" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
               <div class="card-date-top">Spring 2025</div>
               <div class="card-open-icon">⤴</div>
-              <div class="card-logo"><img src="asset/CAHP Logo.png" alt="CAHP" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/CAHP computer.png" alt="CAHP Prototype" class="product-img" /></div>
+              <div class="card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="logo-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer images/CAHP_computer.png" alt="CAHP Prototype" class="product-img" /></div>
               <div class="card-product-name">Capital Area Housing Partnership</div>
               <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
@@ -150,31 +150,31 @@
       <h2 class="other-projects-title">Other Projects</h2>
       <div class="small-projects-grid">
         <div class="small-project-card" style="background: linear-gradient(135deg, #5D3A6B 0%, #3D1F4A 100%);">
-          <div class="small-card-logo"><img src="asset/Waggoner Logo.png" alt="Waggoner Financial" class="small-logo-img" /></div>
+          <div class="small-card-logo"><img src="asset/Waggoner_Logo.png" alt="Waggoner Financial" class="small-logo-img" /></div>
           <div class="small-card-product-name">Waggoner Financial</div>
           <div class="small-card-product-price">UI/UX Designer & PM</div>
         </div>
 
         <div class="small-project-card" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
-          <div class="small-card-logo"><img src="asset/MSU Logo.png" alt="Michigan State University" class="small-logo-img" /></div>
+          <div class="small-card-logo"><img src="asset/MSU_Logo.png" alt="Michigan State University" class="small-logo-img" /></div>
           <div class="small-card-product-name">Michigan State University</div>
           <div class="small-card-product-price">UI/UX Designer</div>
         </div>
 
         <div class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
-          <div class="small-card-logo"><img src="asset/MSU ESK8 Logo.png" alt="MSU E-Skateboard Club" class="small-logo-img" /></div>
+          <div class="small-card-logo"><img src="asset/MSU_ESK8_Logo.png" alt="MSU E-Skateboard Club" class="small-logo-img" /></div>
           <div class="small-card-product-name">MSU E-Skateboard Club</div>
           <div class="small-card-product-price">President & Designer</div>
         </div>
 
         <div class="small-project-card" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
-          <div class="small-card-logo"><img src="asset/Arum Logo.png" alt="Arum" class="small-logo-img" /></div>
+          <div class="small-card-logo"><img src="asset/Arum_Logo.png" alt="Arum" class="small-logo-img" /></div>
           <div class="small-card-product-name">Arum</div>
           <div class="small-card-product-price">UI/UX Designer & PM</div>
         </div>
 
         <div class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
-          <div class="small-card-logo"><img src="asset/CAHP Logo.png" alt="CAHP" class="small-logo-img" /></div>
+          <div class="small-card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="small-logo-img" /></div>
           <div class="small-card-product-name">Capital Area Housing Partnership</div>
           <div class="small-card-product-price">UI/UX Designer & PM</div>
         </div>
