--- a/resume.html
+++ b/resume.html
@@ -13,10 +13,10 @@
             <div class="header-left">
                 <a href="index.html" class="logo">
                     <img src="asset/Union.png" alt="Jake Roginski" class="logo-image" />
-                    <img src="asset/Union white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
+                    <img src="asset/Union_white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
                 </a>
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-                    <img src="asset/dark icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
+                    <img src="asset/dark_icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
                 </button>
             </div>
             <div class="hamburger-menu">
@@ -43,7 +43,7 @@
 
         <section class="resume-section">
             <div class="resume-header">
-                <h1 class="resume-title">Resume. <a href="Jacob Roginski Resume.docx.pdf" target="_blank" class="resume-download"><img src="asset/doc image.png" alt="PDF Download" class="doc-icon"></a></h1>
+                <h1 class="resume-title">Resume. <a href="Jacob Roginski Resume.docx.pdf" target="_blank" class="resume-download"><img src="asset/doc_image.png" alt="PDF Download" class="doc-icon"></a></h1>
             </div>
 
             <div class="resume-content">
