--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
             <div class="header-left">
                 <a href="index.html" class="logo">
                     <img src="asset/Union.png" alt="Jake Roginski" class="logo-image" />
-                    <img src="asset/Union white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
+                    <img src="asset/Union_white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
                 </a>
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-                    <img src="asset/dark icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
+                    <img src="asset/dark_icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
                 </button>
             </div>
             <div class="hamburger-menu">
@@ -90,7 +90,7 @@
                 
                 <div class="weather-widget">
                     <div class="weather-content">
-                        <img src="asset/detroit image.png" alt="Detroit" class="weather-image">
+                        <img src="asset/Detroit_image.png" alt="Detroit" class="weather-image">
                         <div class="weather-description">Dec 4, 2025</div>
                         <div class="weather-temp" id="temperature">--°F</div>
                     </div>
