--- a/waggoner.html
+++ b/waggoner.html
@@ -13,10 +13,10 @@
             <div class="header-left">
                 <a href="index.html" class="logo">
                     <img src="asset/Union.png" alt="Jake Roginski" class="logo-image" />
-                    <img src="asset/Union white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
+                    <img src="asset/Union_white.png" alt="Jake Roginski" class="logo-image dark-hidden" />
                 </a>
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-                    <img src="asset/icons/dark icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
+                    <img src="asset/icons/dark_icon.png" alt="Toggle dark mode" class="toggle-icon-light" />
                 </button>
             </div>
             <div class="hamburger-menu">
@@ -44,7 +44,7 @@
         <section class="project-showcase">
             <div class="project-showcase-header">
                 <div class="project-showcase-logo">
-                    <img src="asset/waggoner grey scale.png" alt="Waggoner Financial" class="showcase-logo-img" />
+                    <img src="asset/waggoner_grey_scale.png" alt="Waggoner Financial" class="showcase-logo-img" />
                 </div>
                 <h1 class="project-showcase-title">Waggoner Financial</h1>
                 <p class="project-showcase-meta">UI/UX Designer & Product Manager | Fall 2025</p>
@@ -122,21 +122,21 @@
                         <div class="design-carousel-container">
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Half Card Mini.png" alt="Card Mini Version 1" class="design-showcase-image" />
+                                    <img src="asset/Cobra computer images/Half_Card_Mini.png" alt="Card Mini Version 1" class="design-showcase-image" />
                                     <p class="design-slide-caption">Minimized Half Card</p>
                                 </div>
                             </div>
 
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Full Card Mini.png" alt="Card Mini Version 2" class="design-showcase-image" />
+                                    <img src="asset/Cobra computer images/Full_Card_Mini.png" alt="Card Mini Version 2" class="design-showcase-image" />
                                     <p class="design-slide-caption">Minimized Full Card</p>
                                 </div>
                             </div>
 
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Empty Card Mini.png" alt="Card Mini Version 3" class="design-showcase-image" />
+                                    <img src="asset/Cobra computer images/Empty_Card_Mini.png" alt="Card Mini Version 3" class="design-showcase-image" />
                                     <p class="design-slide-caption">Minimized Empty Card</p>
                                 </div>
                             </div>
@@ -158,21 +158,21 @@
                         <div class="design-carousel-container">
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Half Card Full.png" alt="Card Full Version 1" class="design-showcase-image" />
+                                    <img src="asset/Cobra computer images/Half_Card_Full.png" alt="Card Full Version 1" class="design-showcase-image" />
                                     <p class="design-slide-caption">Expanded Half Card</p>
                                 </div>
                             </div>
 
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Full Card Full.png" alt="Card Full Version 2" class="design-showcase-image" />
+                                    <img src="asset/Cobra computer images/Full_Card_Full.png" alt="Card Full Version 2" class="design-showcase-image" />
                                     <p class="design-slide-caption">Expanded Full Card</p>
                                 </div>
                             </div>
 
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Empty Card Full.png" alt="Card Full Version 3" class="design-showcase-image" />
+                                    <img src="asset/Cobra computer images/Empty_Card_Full.png" alt="Card Full Version 3" class="design-showcase-image" />
                                     <p class="design-slide-caption">Expanded Empty Card</p>
                                 </div>
                             </div>
@@ -220,25 +220,25 @@
                 <h2 class="showcase-section-title">Other Projects</h2>
                 <div class="small-projects-grid">
                     <div class="small-project-card" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
-                        <div class="small-card-logo"><img src="asset/MSU Logo.png" alt="Michigan State University" class="small-logo-img" /></div>
+                        <div class="small-card-logo"><img src="asset/MSU_Logo.png" alt="Michigan State University" class="small-logo-img" /></div>
                         <div class="small-card-product-name">Michigan State University</div>
                         <div class="small-card-product-price">UI/UX Designer</div>
                     </div>
 
                     <div class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
-                        <div class="small-card-logo"><img src="asset/MSU ESK8 Logo.png" alt="MSU E-Skateboard Club" class="small-logo-img" /></div>
+                        <div class="small-card-logo"><img src="asset/MSU_ESK8_Logo.png" alt="MSU E-Skateboard Club" class="small-logo-img" /></div>
                         <div class="small-card-product-name">MSU E-Skateboard Club</div>
                         <div class="small-card-product-price">President & Designer</div>
                     </div>
 
                     <div class="small-project-card" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
-                        <div class="small-card-logo"><img src="asset/Arum Logo.png" alt="Arum" class="small-logo-img" /></div>
+                        <div class="small-card-logo"><img src="asset/Arum_Logo.png" alt="Arum" class="small-logo-img" /></div>
                         <div class="small-card-product-name">Arum</div>
                         <div class="small-card-product-price">UI/UX Designer & PM</div>
                     </div>
 
                     <div class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
-                        <div class="small-card-logo"><img src="asset/CAHP Logo.png" alt="CAHP" class="small-logo-img" /></div>
+                        <div class="small-card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="small-logo-img" /></div>
                         <div class="small-card-product-name">Capital Area Housing Partnership</div>
                         <div class="small-card-product-price">UI/UX Designer & PM</div>
                     </div>
