changed folder names

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div class="card-date-top">Fall 2025</div>
               <a href="waggoner.html" class="card-open-icon">⤴</a>
               <div class="card-logo"><img src="asset/Waggoner_Logo.png" alt="Waggoner Financial" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/Cobra_Computer.png" alt="Waggoner Prototype" class="product-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer_images/Cobra_Computer.png" alt="Waggoner Prototype" class="product-img" /></div>
               <div class="card-product-name">Waggoner Financial</div>
               <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
@@ -98,7 +98,7 @@
               <div class="card-date-top">Fall 2025</div>
               <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/MSU_Logo.png" alt="Michigan State University" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/MSU_computer.png" alt="Michigan State Prototype" class="product-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer_images/MSU_computer.png" alt="Michigan State Prototype" class="product-img" /></div>
               <div class="card-product-name">Michigan State University</div>
               <div class="card-product-price">UI/UX Designer</div>
             </div>
@@ -109,7 +109,7 @@
               <div class="card-date-top">Ongoing</div>
               <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/MSU_ESK8_Logo.png" alt="MSU E-Skateboard Club" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/MSU_ESK8_computer.png" alt="MSU E-Skateboard Prototype" class="product-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer_images/MSU_ESK8_computer.png" alt="MSU E-Skateboard Prototype" class="product-img" /></div>
               <div class="card-product-name">MSU E-Skateboard Club</div>
               <div class="card-product-price">President & Designer</div>
             </div>
@@ -120,7 +120,7 @@
               <div class="card-date-top">Fall 2025</div>
               <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/Arum_Logo.png" alt="Arum" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/Arum_Computer.png" alt="Arum Prototype" class="product-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer_images/Arum_Computer.png" alt="Arum Prototype" class="product-img" /></div>
               <div class="card-product-name">Arum</div>
               <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
@@ -131,7 +131,7 @@
               <div class="card-date-top">Spring 2025</div>
               <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="logo-img" /></div>
-              <div class="card-product-image"><img src="asset/Computer images/CAHP_computer.png" alt="CAHP Prototype" class="product-img" /></div>
+              <div class="card-product-image"><img src="asset/Computer_images/CAHP_computer.png" alt="CAHP Prototype" class="product-img" /></div>
               <div class="card-product-name">Capital Area Housing Partnership</div>
               <div class="card-product-price">UI/UX Designer & Product Manager</div>
             </div>
