--- a/waggoner.html
+++ b/waggoner.html
@@ -122,21 +122,21 @@
                         <div class="design-carousel-container">
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Half_Card_Mini.png" alt="Card Mini Version 1" class="design-showcase-image" />
+                                    <img src="asset/Cobra_computer_images/Half_Card_Mini.png" alt="Card Mini Version 1" class="design-showcase-image" />
                                     <p class="design-slide-caption">Minimized Half Card</p>
                                 </div>
                             </div>
 
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Full_Card_Mini.png" alt="Card Mini Version 2" class="design-showcase-image" />
+                                    <img src="asset/Cobra_computer_images/Full_Card_Mini.png" alt="Card Mini Version 2" class="design-showcase-image" />
                                     <p class="design-slide-caption">Minimized Full Card</p>
                                 </div>
                             </div>
 
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Empty_Card_Mini.png" alt="Card Mini Version 3" class="design-showcase-image" />
+                                    <img src="asset/Cobra_computer_images/Empty_Card_Mini.png" alt="Card Mini Version 3" class="design-showcase-image" />
                                     <p class="design-slide-caption">Minimized Empty Card</p>
                                 </div>
                             </div>
@@ -158,21 +158,21 @@
                         <div class="design-carousel-container">
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Half_Card_Full.png" alt="Card Full Version 1" class="design-showcase-image" />
+                                    <img src="asset/Cobra_computer_images/Half_Card_Full.png" alt="Card Full Version 1" class="design-showcase-image" />
                                     <p class="design-slide-caption">Expanded Half Card</p>
                                 </div>
                             </div>
 
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Full_Card_Full.png" alt="Card Full Version 2" class="design-showcase-image" />
+                                    <img src="asset/Cobra_computer_images/Full_Card_Full.png" alt="Card Full Version 2" class="design-showcase-image" />
                                     <p class="design-slide-caption">Expanded Full Card</p>
                                 </div>
                             </div>
 
                             <div class="design-carousel-slide">
                                 <div class="design-slide-content">
-                                    <img src="asset/Cobra computer images/Empty_Card_Full.png" alt="Card Full Version 3" class="design-showcase-image" />
+                                    <img src="asset/Cobra_computer_images/Empty_Card_Full.png" alt="Card Full Version 3" class="design-showcase-image" />
                                     <p class="design-slide-caption">Expanded Empty Card</p>
                                 </div>
                             </div>
