made skills buttons tags on resume

--- a/resume.html
+++ b/resume.html
@@ -149,10 +149,18 @@
                     </div>
                 </div>
 
-                <!-- Skills Section -->
                 <div class="resume-block">
                     <h2 class="resume-section-title">Skills</h2>
-                    <p class="resume-skills-text">Figma (Expert), Jira (Intermediate), Basecamp (Basic), Visual Studio Code (Intermediate), CSS (Intermediate), HTML (Intermediate), JavaScript (Basic), TeamDynamix (Intermediate)</p>
+                    <div class="skills-grid">
+                        <div class="skill-tag">Figma (Expert)</div>
+                        <div class="skill-tag">Jira (Intermediate)</div>
+                        <div class="skill-tag">Basecamp (Basic)</div>
+                        <div class="skill-tag">Visual Studio Code (Intermediate)</div>
+                        <div class="skill-tag">CSS (Intermediate)</div>
+                        <div class="skill-tag">HTML (Intermediate)</div>
+                        <div class="skill-tag">JavaScript (Basic)</div>
+                        <div class="skill-tag">TeamDynamix (Intermediate)</div>
+                    </div>
                 </div>
             </div>
         </section>
