added other product pages, fixed cards, linked cards to projects

--- a/waggoner.html
+++ b/waggoner.html
@@ -219,29 +219,29 @@
         <section class="showcase-section">
                 <h2 class="showcase-section-title">Other Projects</h2>
                 <div class="small-projects-grid">
-                    <div class="small-project-card" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
+                    <a href="msu.html" class="small-project-card" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
                         <div class="small-card-logo"><img src="asset/MSU_Logo.png" alt="Michigan State University" class="small-logo-img" /></div>
                         <div class="small-card-product-name">Michigan State University</div>
                         <div class="small-card-product-price">UI/UX Designer</div>
-                    </div>
+                    </a>
 
-                    <div class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
+                    <a href="msu-esk8.html" class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
                         <div class="small-card-logo"><img src="asset/MSU_ESK8_Logo.png" alt="MSU E-Skateboard Club" class="small-logo-img" /></div>
                         <div class="small-card-product-name">MSU E-Skateboard Club</div>
                         <div class="small-card-product-price">President & Designer</div>
-                    </div>
+                    </a>
 
-                    <div class="small-project-card" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
+                    <a href="arum.html" class="small-project-card" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
                         <div class="small-card-logo"><img src="asset/Arum_Logo.png" alt="Arum" class="small-logo-img" /></div>
                         <div class="small-card-product-name">Arum</div>
                         <div class="small-card-product-price">UI/UX Designer & PM</div>
-                    </div>
+                    </a>
 
-                    <div class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
+                    <a href="cahp.html" class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
                         <div class="small-card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="small-logo-img" /></div>
                         <div class="small-card-product-name">Capital Area Housing Partnership</div>
                         <div class="small-card-product-price">UI/UX Designer & PM</div>
-                    </div>
+                    </a>
                 </div>
             </section>
 
