--- a/index.html
+++ b/index.html
@@ -85,55 +85,50 @@
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #5D3A6B 0%, #3D1F4A 100%);">
               <div class="card-date-top">Fall 2025</div>
-              <a href="waggoner.html" class="card-open-icon">⤴</a>
               <div class="card-logo"><img src="asset/Waggoner_Logo.png" alt="Waggoner Financial" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/Cobra_Computer.png" alt="Waggoner Prototype" class="product-img" /></div>
               <div class="card-product-name">Waggoner Financial</div>
-              <div class="card-product-price">UI/UX Designer & Product Manager</div>
+              <a href="waggoner.html" class="card-product-price">UI/UX Designer & Product Manager</a>
             </div>
           </div>
 
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
               <div class="card-date-top">Fall 2025</div>
-              <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/MSU_Logo.png" alt="Michigan State University" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/MSU_computer.png" alt="Michigan State Prototype" class="product-img" /></div>
               <div class="card-product-name">Michigan State University</div>
-              <div class="card-product-price">UI/UX Designer</div>
+              <a href="msu.html" class="card-product-price">UI/UX Designer</a>
             </div>
           </div>
 
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
               <div class="card-date-top">Ongoing</div>
-              <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/MSU_ESK8_Logo.png" alt="MSU E-Skateboard Club" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/MSU_ESK8_computer.png" alt="MSU E-Skateboard Prototype" class="product-img" /></div>
               <div class="card-product-name">MSU E-Skateboard Club</div>
-              <div class="card-product-price">President & Designer</div>
+              <a href="msu-esk8.html" class="card-product-price">President & Designer</a>
             </div>
           </div>
 
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
               <div class="card-date-top">Fall 2025</div>
-              <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/Arum_Logo.png" alt="Arum" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/Arum_Computer.png" alt="Arum Prototype" class="product-img" /></div>
               <div class="card-product-name">Arum</div>
-              <div class="card-product-price">UI/UX Designer & Product Manager</div>
+              <a href="arum.html" class="card-product-price">UI/UX Designer & Product Manager</a>
             </div>
           </div>
 
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
               <div class="card-date-top">Spring 2025</div>
-              <div class="card-open-icon">⤴</div>
               <div class="card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/CAHP_computer.png" alt="CAHP Prototype" class="product-img" /></div>
               <div class="card-product-name">Capital Area Housing Partnership</div>
-              <div class="card-product-price">UI/UX Designer & Product Manager</div>
+              <a href="cahp.html" class="card-product-price">UI/UX Designer & Product Manager</a>
             </div>
           </div>
         </div>
@@ -147,37 +142,37 @@
         </div>
       </div>
 
-      <h2 class="other-projects-title">Other Projects</h2>
+      <h2 class="other-projects-title">All Projects</h2>
       <div class="small-projects-grid">
-        <div class="small-project-card" style="background: linear-gradient(135deg, #5D3A6B 0%, #3D1F4A 100%);">
+        <a href="waggoner.html" class="small-project-card" style="background: linear-gradient(135deg, #5D3A6B 0%, #3D1F4A 100%);">
           <div class="small-card-logo"><img src="asset/Waggoner_Logo.png" alt="Waggoner Financial" class="small-logo-img" /></div>
           <div class="small-card-product-name">Waggoner Financial</div>
           <div class="small-card-product-price">UI/UX Designer & PM</div>
-        </div>
+        </a>
 
-        <div class="small-project-card" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
+        <a href="msu.html" class="small-project-card" style="background: linear-gradient(135deg, #00663B 0%, #004D2B 100%);">
           <div class="small-card-logo"><img src="asset/MSU_Logo.png" alt="Michigan State University" class="small-logo-img" /></div>
           <div class="small-card-product-name">Michigan State University</div>
           <div class="small-card-product-price">UI/UX Designer</div>
-        </div>
+        </a>
 
-        <div class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
+        <a href="msu-esk8.html" class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
           <div class="small-card-logo"><img src="asset/MSU_ESK8_Logo.png" alt="MSU E-Skateboard Club" class="small-logo-img" /></div>
           <div class="small-card-product-name">MSU E-Skateboard Club</div>
           <div class="small-card-product-price">President & Designer</div>
-        </div>
+        </a>
 
-        <div class="small-project-card" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
+        <a href="arum.html" class="small-project-card" style="background: linear-gradient(135deg, #2D5F4F 0%, #1A4032 100%);">
           <div class="small-card-logo"><img src="asset/Arum_Logo.png" alt="Arum" class="small-logo-img" /></div>
           <div class="small-card-product-name">Arum</div>
           <div class="small-card-product-price">UI/UX Designer & PM</div>
-        </div>
+        </a>
 
-        <div class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
+        <a href="cahp.html" class="small-project-card" style="background: linear-gradient(135deg, #1B5E3F 0%, #0F3D2A 100%);">
           <div class="small-card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="small-logo-img" /></div>
           <div class="small-card-product-name">Capital Area Housing Partnership</div>
           <div class="small-card-product-price">UI/UX Designer & PM</div>
-        </div>
+        </a>
       </div>
     </section>
 
@@ -281,8 +276,13 @@
       });
     });
 
-    // Click on carousel to navigate (left/right)
+    // Click on carousel to navigate (left/right) - but not on links
     carousel.addEventListener('click', (e) => {
+      // Don't navigate if clicking on a link
+      if (e.target.tagName === 'A' || e.target.closest('a')) {
+        return;
+      }
+      
       const carouselRect = carousel.getBoundingClientRect();
       const clickX = e.clientX - carouselRect.left;
       const midpoint = carouselRect.width / 2;
